FIXED MINOR ISSUE